test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specified_by_kecak256.sol
contract C layout at uint(keccak256(bytes.concat("ABCD"))) {}
// ----
// UnimplementedFeatureError 1834: (0-61): Code generation is not supported for contracts with specified storage layout base.
